--- a/src/Tiveria.Common.BasicHttpServer/Tiveria.Common.BasicHttpServer.csproj
+++ b/src/Tiveria.Common.BasicHttpServer/Tiveria.Common.BasicHttpServer.csproj
@@ -31,7 +31,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Tiveria.Common" Version="1.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Tiveria.Common\src\Tiveria.Common\Tiveria.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
